Fix T45240: New depsgraph ignores animation applied on the curve data